--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -2,8 +2,8 @@
 /* GLOBAL
 ΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇôΓÇô */
 body, a, h2 {
-  transition: all 0.5s ease-out 0s;
-  -webkit-transition: all 0.5s ease-out 0s; }
+  transition: all 0.5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s; }
 
 a:hover {
   cursor: pointer; }
