Added style to the editor window
Made stylistic changes to the editor window

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -14,7 +14,7 @@ $raleway: 'Raleway', sans-serif;
 
 /* GLOBAL
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-body, a, h2 {
+body, a, h2, main {
   transition: all 0.5s ease 0s;
   -webkit-transition: all 0.5s ease 0s;
 }
@@ -23,8 +23,9 @@ b {
   font-weight: 900;
 }
 
-a:hover {
-  cursor: pointer;    
+a, a:hover {
+  color: white;
+  background: none; 
 }
 
 html, body {
@@ -54,21 +55,20 @@ main {
   font-family: $raleway;
   font-weight: 300;
   text-align: center;
-
-  & >  .links > .row > div > i
-    {
-      background-color:#00F;
-    }
 }
 
 /* LINKS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .links {
   margin: 0 auto;
-  padding-top: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   font-size: 2rem;
-  width: 700px;
-  @media screen and (max-width: 700px) {
+  width: 500px;
+  .row > div > a {
+    opacity: .7;
+  }
+  @media screen and (max-width: 500px) {
     width: 95%;
   }
 }
@@ -80,10 +80,9 @@ main {
   margin: 0 auto;
   text-align: left;
   margin-top: 1rem;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
+  border-radius: 6px;
   // border: 1px 1px 1px 0px solid whitesmoke;
-  background-color: #4D4D4D;
+  background-color: #555;
   .window-bar {
     background:
     radial-gradient(7px at 14px 50%, #adadad 0px, #adadad 5px, #adadad 6px, rgba(255, 255, 255, 0) 7px),
@@ -94,15 +93,68 @@ main {
   @media screen and (max-width: 700px) {
     width: 85%;
   }
+  @media (min-width: 576px) {
+    .container {
+        max-width: 700px;
+    }
+  }
+}
+
+.editor-tab-row {
+  background-color: #444;
+  .editor-tab {
+    font-family: $open-sans;
+    font-weight: 300;
+    font-size: 0.7rem;
+    background-color: #333;
+    margin-left: 1.1rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+    border-bottom: $red;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+    @media screen and (max-width: 700px) {
+      margin-left: 1.05rem;
+    }
+    p {
+      margin-bottom: 0;
+    }
+    .editor-tab-x {
+      float: right;
+      font-size: 0.3rem;
+      padding: 1px 0 0 0;
+    }
+  }
 }
 
 .editor {
-  background-color: $gray;
-  padding: 1rem;
+  background-color: #222;
+  padding: 1rem 1rem 1rem 0.25rem;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border-left: #444;
+  border-style: solid;
+  border-width: 0 0 0 2rem;
 
+  p {
+    margin-bottom: 0;
+    margin-left: -1.5rem;
+    transition: all 0.2s ease 0s;
+    -webkit-transition: all 0.2s ease 0s;
+    opacity: 0;
+  }
   .lead {
     font-size: 1rem;
   }
+
+  .line-number {
+    position: absolute;
+    display: inline;
+    font-size: smaller;
+    color: whitesmoke;
+    transition: all 0.2s ease 0s;
+    -webkit-transition: all 0.2s ease 0s;
+    opacity: 0;;
+}
 }
 
 /* RESUME
