--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -94,6 +94,7 @@ main {
   border-style: solid;
   border-width: 0 0 0 2rem; }
   .editor p {
+    color: whitesmoke;
     margin-bottom: 0;
     margin-left: -1.5rem;
     transition: all 0.2s ease 0s;
@@ -104,6 +105,7 @@ main {
   .editor .line-number {
     position: absolute;
     display: inline;
+    font-family: "Open Sans", sans-serif;
     font-size: smaller;
     color: whitesmoke;
     transition: all 0.2s ease 0s;
