--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -42,7 +42,7 @@ html, body {
 
 .masthead {
   background-color: whitesmoke;
-  padding: 2rem;
+  padding: 3rem;
   .masthead-brand {
     font-family: $raleway;
     text-transform: uppercase; 
@@ -57,12 +57,18 @@ main {
   text-align: center;
 }
 
+footer {
+  font-family: $raleway;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 /* LINKS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .links {
   margin: 0 auto;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
   font-size: 2rem;
   width: 500px;
   .row > div > a {
