--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -137,6 +137,7 @@ footer {
 
   p {
     color: whitesmoke;
+    line-height: 1.5rem;
     margin-bottom: 0;
     margin-left: -1.5rem;
     transition: all 0.4s ease 0s;
@@ -148,6 +149,7 @@ footer {
   }
 
   .line-number {
+    line-height: 1.5rem;
     position: absolute;
     display: inline;
     font-size: smaller;
